--- a/AtomicTech/SMK-Centaur/CONFIG_SMK_OrangeTank.cfg
+++ b/AtomicTech/SMK-Centaur/CONFIG_SMK_OrangeTank.cfg
@@ -1,10 +1,10 @@
 PART
 {
-	name = fuelTank3-2Classic
+	name = SMK-OrangeTank
 	module = Part
-	author = NovaSilisko
+	author = NovaSilisko, TriggeredSnake, Atomikku
 	mesh = model.mu
-	rescaleFactor = 1
+	rescaleFactor = 1, 1, 0.5
 	node_stack_top = 0.0, 3.75, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -3.75, 0.0, 0.0, -1.0, 0.0, 2
 	node_attach = 1.25, 0.0, 0.0, 1.0, 0.0, 0.0, 1
@@ -13,11 +13,11 @@ PART
 	cost = 5750
 	category = FuelTank
 	subcategory = 0
-	title = Rockomax Jumbo-64 Fuel Tank (1.3)
-	manufacturer = Rockomax Conglomerate
-	description = The largest tank available from Rockomax, the Jumbo-64 holds a vast amount of fuel in a friendly orange insulated container. Contrary to popular belief, the Jumbo-64 is NOT orange flavored and should NOT be tasted.
+	title = AT-AVL "Recursion" Liquid Fuel Storage Tank
+	manufacturer = AtomicTech Inc.
+	description = TBD
 	attachRules = 1,1,1,1,0
-	mass = 4
+	mass = 2
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
@@ -31,13 +31,13 @@ PART
 	RESOURCE
 	{
 		name = LiquidFuel
-		amount = 2880
-		maxAmount = 2880
+		amount = 1440
+		maxAmount = 1440
 	}
 	RESOURCE
 	{
 		name = Oxidizer
-		amount = 3520
-		maxAmount = 3520
+		amount = 1760
+		maxAmount = 1760
 	}
 }
