--- a/AtomicTech/SMK-Centaur/CONFIG_SMK_OrangeTank.cfg
+++ b/AtomicTech/SMK-Centaur/CONFIG_SMK_OrangeTank.cfg
@@ -8,10 +8,10 @@ PART
 	node_stack_top = 0.0, 3.75, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -3.75, 0.0, 0.0, -1.0, 0.0, 2
 	node_attach = 1.25, 0.0, 0.0, 1.0, 0.0, 0.0, 1
-	TechRequired = advFuelSystems
+	TechRequired = None
 	entryCost = 24200
 	cost = 5750
-	category = FuelTank
+	category = None
 	subcategory = 0
 	title = AT-AVL "Recursion" Liquid Fuel Storage Tank
 	manufacturer = AtomicTech Inc.
