--- a/AtomicTech/SMK-Centaur/MM_SMK_Centaur_WaterFall.cfg
+++ b/AtomicTech/SMK-Centaur/MM_SMK_Centaur_WaterFall.cfg
@@ -1,1 +1,119 @@
-
+@PART[AtomicTechCentaur]:NEEDS[Waterfall]:FOR[StockWaterfallEffects]
+{
+  !EFFECTS {}
+  EFFECTS
+  {
+		fx-skiff-running
+		{
+		    AUDIO
+            {
+                channel = Ship
+                clip = Waterfall/Sounds/KW/sound_altloop
+                volume = 0.0 0.0
+                volume = 1.0 0.8
+                pitch = 0.0 1.0
+                pitch = 1.0 1.0
+                loop = true
+            }
+        }
+        engage
+        {
+            AUDIO
+            {
+                channel = Ship
+                clip = Waterfall/Sounds/KW/sound_liq4
+                volume = 0.8
+                pitch = 1.0
+                loop = false
+            }
+        }
+        disengage
+        {
+            AUDIO
+            {
+                channel = Ship
+                clip = sound_vent_soft
+                volume = 0.8
+                pitch = 2.0
+                loop = false
+            }
+        }
+        flameout
+        {
+            AUDIO
+            {
+                channel = Ship
+                clip = sound_explosion_low
+                volume = 0.8
+                pitch = 2.0
+                loop = false
+            }
+        }
+  }
+  
+  @MODULE[ModuleEngines*]
+  {
+    @name = ModuleEnginesFX
+	%runningEffectName = fx-skiff-running
+	!powerEffectName
+  }
+  
+  MODULE
+  {
+    name = ModuleWaterfallFX
+    moduleID = SkiffFX
+  
+    CONTROLLER
+    {
+      name = atmosphereDepth
+      linkedTo = atmosphere_density
+    }
+    CONTROLLER
+    {
+      name = throttle
+      linkedTo = throttle
+	  engineID = basicEngine
+	  responseRateUp = 0.03
+      responseRateDown = 0.2
+    }
+	CONTROLLER
+    {
+      name = Random2
+      linkedTo = random
+	  noiseType = perlin
+	  scale = 0.5
+	  minimum = -0.5
+	  speed = 10
+	  seed = 40
+    }
+	CONTROLLER
+    {
+      name = Random3
+      linkedTo = random
+	  noiseType = perlin
+	  scale = 1
+	  minimum = 0
+	  speed = 5
+	  seed = -20
+    }
+	CONTROLLER
+    {
+      name = Random4
+      linkedTo = random
+	  noiseType = perlin
+	  scale = 0.5
+	  minimum = -0.5
+	  speed = 10
+	  seed = 33
+    }
+	
+    TEMPLATE
+    {
+      templateName = stock-hydrolox-upper-3
+      overrideParentTransform = thrustTransform
+	  position = 0,0,-0.2884
+	  rotation = 0, 0, 0
+      scale = 0.624, 0.624, 0.624
+	}
+  }
+}
